opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/incr_dom_widgets"
bug-reports: "https://github.com/janestreet/incr_dom_widgets/issues"
dev-repo: "git+https://github.com/janestreet/incr_dom_widgets.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async_js"
  "async_kernel"
  "core_kernel"
  "incr_dom"
  "incr_map"
  "incr_select"
  "incremental_kernel"
  "ppx_jane"
  "record_builder"
  "splay_tree"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "js_of_ocaml"             {>= "3.0"}
  "js_of_ocaml-ppx"
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
A library of libraries and widgets for Incr_dom applications.

For the moment, most of the libraries contained here are about
efficient rendering of tabular data, in particular supporting /partial
rendering/, /i.e./, only rendering a subset of the widgets that are
logically in the view, depending on what is expected to be visible to
the end user.
"
