opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/incr_dom_widgets"
bug-reports: "https://github.com/janestreet/incr_dom_widgets/issues"
dev-repo: "git+https://github.com/janestreet/incr_dom_widgets.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/incr_dom_widgets/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "async_js"
  "async_kernel"
  "incr_dom"
  "incr_map"
  "incr_select"
  "incremental"
  "ppx_jane"
  "record_builder"
  "splay_tree"
  "virtual_dom"
  "dune"            {build & >= "1.5.1"}
  "js_of_ocaml"     {>= "3.2.1"}
  "js_of_ocaml-ppx"
]
synopsis: "A library of libraries and widgets for Incr_dom applications"
description: "
For the moment, most of the libraries contained here are about
efficient rendering of tabular data, in particular supporting /partial
rendering/, /i.e./, only rendering a subset of the widgets that are
logically in the view, depending on what is expected to be visible to
the end user.
"
