opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/incr_dom_widgets"
bug-reports: "https://github.com/janestreet/incr_dom_widgets/issues"
dev-repo: "git+https://github.com/janestreet/incr_dom_widgets.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/incr_dom_widgets/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07.0" & < "4.08.0"}
  "async_js"
  "async_kernel"
  "incr_dom"
  "incr_map"
  "incr_select"
  "incremental"
  "ppx_jane"
  "splay_tree"
  "virtual_dom"
  "dune"            {build & >= "1.5.1"}
  "js_of_ocaml"     {>= "3.2.1"}
  "js_of_ocaml-ppx"
]
synopsis: "Utilities for Incr_dom"
description: "
A collection of utilities and widgets for Incr_dom applications. Note that this library is in the process of being reorganized, and much of its present functionality will be moved out to other libraries.  Longer term, we expect this to contain easy to use wrappers of simple elements like buttons and text entry boxes.
"
